<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimary"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardCornerRadius="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:src="@drawable/sign_in"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:alpha="0.7"
                android:layout_centerInParent="true"
                android:src="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logo"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textFontWeight="600"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/welcome_txt"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textFontWeight="500"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/welcome_txt_sub"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textSize="12sp"
                    />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:textFontWeight="400"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:textFontWeight="400"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_in_txt"
            android:textColor="@color/txt_gray"
            android:textSize="12sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:textFontWeight="400"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/user_id_txt"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/user_id_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/enter_user_id_txt"
            android:inputType="textPersonName"
            android:background="@drawable/edt_bg"
            android:textFontWeight="500"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/txt_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:textFontWeight="400"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/password_txt"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            >
        <EditText
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1.8"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:textFontWeight="500"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="10dp"
            android:textSize="12dp"
            android:hint="@string/enter_password_txt"
            android:textColor="@color/black"
            android:textColorHint="@color/txt_gray" />

            <TextView
                android:id="@+id/show_tv"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="start|center"
                android:textFontWeight="400"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/show_txt"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                />
        </LinearLayout>

        <CheckBox
            android:id="@+id/remember_me_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:textSize="12dp"
            android:buttonTint="@color/check_box_state"
            android:text="@string/remember_me" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14dp"
            />
    </LinearLayout>

    </RelativeLayout>
</ScrollView>