<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddEmployeeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="0dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/border_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:textFontWeight="500"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/emp_name"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
            <EditText
                android:id="@+id/emp_name_et"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/enter_emp_name"
                android:inputType="textPersonName"
                android:background="@drawable/border_bg"
                android:textFontWeight="400"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="10dp"
                android:layout_marginLeft="5dp"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/txt_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:textFontWeight="500"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/log_name"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
            <EditText
                android:id="@+id/log_name_et"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/enter_log_name"
                android:inputType="textPersonName"
                android:background="@drawable/border_bg"
                android:textFontWeight="400"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="10dp"
                android:layout_marginLeft="5dp"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/txt_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:textFontWeight="500"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/mob_no"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
            <EditText
                android:id="@+id/mobile_et"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/enter_mob"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="10"
                android:background="@drawable/border_bg"
                android:textFontWeight="400"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="10dp"
                android:layout_marginLeft="5dp"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/txt_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:textFontWeight="500"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/email_id"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/enter_Email"
                android:inputType="textEmailAddress"
                android:background="@drawable/border_bg"
                android:textFontWeight="400"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="10dp"
                android:layout_marginLeft="5dp"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/txt_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:weightSum="2"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/saveBtn"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/roboto_bold"
                    android:background="@drawable/button_shape"
                    android:text="@string/save_txt"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clearBtn"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.7"
                    android:background="@drawable/button_shape"
                    android:text="@string/clear_txt"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:backgroundTint="@color/red"
                    android:fontFamily="@font/roboto_bold"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="13sp" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>