<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="5"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/s_no_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textFontWeight="400"
            android:fontFamily="@font/roboto_black"
            android:hint="@string/sn_no"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="0.5"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/text_Color_light"/>
        <TextView
            android:id="@+id/emp_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_gravity="center"
            android:textFontWeight="400"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_black"
            android:hint="@string/distrcit_txt"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_weight="1.5"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/text_Color_light"/>

        <TextView
            android:id="@+id/mobile_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textFontWeight="400"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black"
            android:hint="@string/mandal_txt"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_weight="1.1"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/text_Color_light"/>

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textFontWeight="400"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_black"
            android:hint="@string/villege_txt"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_weight="1.2"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/text_Color_light"/>
        <ImageView
            android:id="@+id/edit_img"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_edit_square_24"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_Color_light"/>
</LinearLayout>